--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,5 +14,9 @@
     <script src="js/app.js"></script>
     <script src="js/controllers/loginController.js"></script>
     <script src="js/controllers/homeController.js"></script>
+    <script src="js/controllers/transacoesController.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    
   </body>
 </html>
